--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
   </head>
-  <body class="page theme_dark">
+  <body class="page">
     <header class="header decorated-zone">
       <div class="header__lamp" aria-hidden="true">
         <div class="header__lamp-text">REC</div>
@@ -43,11 +43,11 @@
       </div>
     </header>
     <main class="main">
-      <section class="content why-focus">
-        <h2 class="content__title">Почему сосредоточиться так сложно</h2>
+      <section class="content">
+        <h2 class="content__title title-type">Почему сосредоточиться так сложно</h2>
         <ul class="content__list">
           <li class="content__item">
-            <h3 class="content__subtitle title-decor">Многозадачность</h3>
+            <h3 class="content__subtitle title-decor title-type">Многозадачность</h3>
             <p class="content__text-block">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
@@ -58,7 +58,7 @@
             </p>
           </li>
           <li class="content__item">
-            <h3 class="content__subtitle title-decor">Дофамин</h3>
+            <h3 class="content__subtitle title-decor title-type">Дофамин</h3>
             <p class="content__text-block">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная
               противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто
@@ -69,11 +69,11 @@
           </li>
         </ul>
       </section>
-      <section class="content what-focus">
-        <h2 class="content__title">Что снижает концентрацию внимания?</h2>
+      <section class="content content-alignment">
+        <h2 class="content__title title-type">Что снижает концентрацию внимания?</h2>
         <ul class="content__list">
           <li class="content__item">
-            <h3 class="content__subtitle title-decor">Многозадачность</h3>
+            <h3 class="content__subtitle title-decor title-type">Многозадачность</h3>
             <p class="content__text-block">
               Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет
               наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть
@@ -81,7 +81,7 @@
             </p>
           </li>
           <li class="content__item">
-            <h3 class="content__subtitle title-decor">Еда</h3>
+            <h3 class="content__subtitle title-decor title-type">Еда</h3>
             <p class="content__text-block">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но
               уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие
@@ -89,7 +89,7 @@
             </p>
           </li>
           <li class="content__item">
-            <h3 class="content__subtitle title-decor">Гаджеты</h3>
+            <h3 class="content__subtitle title-decor title-type">Гаджеты</h3>
             <p class="content__text-block">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с
               забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к
@@ -99,10 +99,10 @@
           </li>
         </ul>
       </section>
-      <section class="content how-focus">
-        <h2 class="content__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <section class="content">
+        <h2 class="content__title title-type">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="content__inner">
-          <h3 class="content__subtitle title-decor">5 простых (на самом деле не очень) советов</h3>
+          <h3 class="content__subtitle title-decor title-type">5 простых (на самом деле не очень) советов</h3>
           <ul class="content__sublist">
             <li class="content__subitem">
               <h4 class="content__subitem-title title-decor">Представьте небо и облака</h4>
@@ -113,7 +113,7 @@
                 денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
               </p>
             </li>
-            <li class="content__sublitem">
+            <li class="content__subitem">
               <h4 class="content__subitem-title title-decor">Включите музыку</h4>
               <p class="content__text-block">
                 Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно
@@ -121,7 +121,7 @@
                 нейромузыкой.
               </p>
             </li>
-            <li class="content__sublitem">
+            <li class="content__subitem">
               <h4 class="content__subitem-title title-decor">Прогуляйтесь</h4>
               <p class="content__text-block">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -132,7 +132,7 @@
                 работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
               </p>
             </li>
-            <li class="content__sublitem">
+            <li class="content__subitem">
               <h4 class="content__subitem-title title-decor">Хорошо ешьте</h4>
               <p class="content__text-block">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например,
@@ -151,7 +151,7 @@
         </div>
       </section>
       <section class="gallery">
-        <h3 class="gallery__subtitle title-decor">А можно в картинках?</h3>
+        <h3 class="gallery__subtitle title-decor title-type">А можно в картинках?</h3>
         <ul class="gallery__list">
           <li class="gallery__item gallery__sunset">
             <picture>
